@@ -1,3 +1,8 @@
+2005-05-13  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-ssl.c: (_lm_ssl_read):
+	- Try to fix LM-3 for real this time.
+
 2005-05-08  Mikael Hallendal  <micke@imendio.com>
 
 	* Release 0.90
